# profilarr-trash-guides

./: .gitignore  README.md  pyproject.toml  renovate.json
custom_formats/: 1.0 Mono.yml  10-mono-b124be9b146540f8e62f98fe32e49a2a.yml  1080p-820b09bb9acbfde9c35c71e0e565dad8.yml  1080p.yml  10bit-a5d148168c4506b55cf53984107c396e.yml  10bit.yml  2.0 Stereo.yml  20-stereo-89dac1be53d5268a7e10a19d3c896826.yml  2160p-fb392fb0d61a010ae38e49ceaa24a1ef.yml  2160p.yml  3.0 Sound.yml  30-sound-205125755c411c3b8622ca3175d27b37.yml  3D.yml  3d-b8cd450cbfa689c0259a01d9e29ba3d6.yml  4.0 Sound.yml  40-sound-373b58bd188fc00c817bd8c7470ea285.yml  40-sound.yml  4K Remaster.yml  4k-remaster-eca37840c13c6ef2dd0262b141a5482f.yml  4k-remaster.yml  5.1 Surround.yml  51-surround-77ff61788dfe1097194fd8743d7b4524.yml  6.1 Surround.yml  61-surround-6fd7b090c3f7317502ab3b63cc7f51e3.yml  61-surround.yml  7.1 Surround.yml  71-surround-e77382bcfeba57cb83744c9c5449b401.yml  720p-b2be17d608fc88818940cd1833b0b24c.yml  720p.yml  AAC.yml  AMZN.yml  ATMOS (undefined).yml  ATVP.yml  AUBC.yml  AV1.yml  Anime BD Tier 01 (Top SeaDex Muxers).yml  Anime BD Tier 02 (SeaDex Muxers).yml  Anime BD Tier 03 (SeaDex Muxers).yml  Anime BD Tier 04 (SeaDex Muxers).yml  Anime BD Tier 05 (Remuxes).yml  (+1342 more)
media_management/: naming.yml  quality_definitions.yml
profiles/: (Anime) Remux-1080p.yml  (French MULTi.VO) HD Bluray + WEB.yml  (French MULTi.VO) HD Remux (1080p).yml  (French MULTi.VO) UHD Bluray + WEB.yml  (French MULTi.VO) UHD Remux (2160p).yml  (German) HD Bluray + WEB.yml  (German) HD Remux + WEB.yml  (German) Remux + WEB 2160p.yml  (German) UHD Bluray + WEB (Alternative).yml  (German) UHD Bluray + WEB.yml  (SQP) SQP-1 (1080p).yml  (SQP) SQP-2.yml  (+122 more)
(+5740 files in other folders)
